working on passing make move